src/objects/Document_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WS_Field_Name__c</fullName>
        <label>WS Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <label>Workflow</label>
        <type>TextArea</type>
    </fields>
    <label>Document Type</label>
    <pluralLabel>Document Types</pluralLabel>
</CustomObject>